2009-10-17 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-iactions-list.c
	(collapse_to_parent, expand_to_first_child):
	Make left and right arrows accelerators to collapse/expand trees.

	* src/nact/nact-iactions-list.c (inline_edition):
	Make F2 an accelerator to inline edit the label.

	Creation of a root menu in the Nautilus context menu is now a
	user preference.

	* data/nautilus-actions.schemas.in: Define a schema for the preference.

	* src/nact/nact-preferences-editor.c: Edit the preference.

	* src/nact/nautilus-actions-config-tool.ui: Define a new checkbox.

	* src/plugin/nautilus-actions.c:
	Create a root menu only if users has asked for.

	* src/runtime/na-ipivot-consumer.c:
	* src/runtime/na-ipivot-consumer.h:
	Define new virtual which handle the monitoring of the preference.

	* src/runtime/na-iprefs.c:
	* src/runtime/na-iprefs.h:
	Read/write the preference in GConf.

	* src/nact/nact-main-window.c (setup_dialog_title):
	Restore function which had disappeared since v 1.12.

	* src/nact/nact-iactions-list.c
	(nact_iactions_list_initial_load_toplevel):
	Cells are only editable in edition mode.

	* src/common/na-xml-writer.c:
	* src/common/na-xml-writer.h (na_xml_writer_export):
	Now returns messages as a GSList.

	* src/nact/nact-assistant-export.c (assist_prepare_exportdone):
	Enhance sumary page.

	* src/common/na-utils.c:
	* src/common/na-utils.h (na_utils_prefix_strings): New function.

	* src/nact/nact-assistant-import.c (prepare_importdone):
	Enhance the summary page.

	* src/nact/nact-xml-reader.c:
	Actually relabel action if required.
	Return all messages.

	* src/nact/nact-assistant-export.c (assist_prepare_exportdone):
	* src/nact/nact-assistant-import.c (prepare_importdone):
	At end, quit the assistant on Cancel without warning.

	* src/nact/base-window.c (setup_builder):
	A window may have its own builder, or its own UI XML definition file,
	or both.

	* src/nact/nact-assistant-export-ask.c